--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Authors@R:
            role = c("aut"),
            email = "doh24@cornell.edu"))
 Description: `bumblb` fits unbalanced mixture models using Bag of Little Bootstraps with various subsampling weights.
-License: GPL-3
+License: GPL-3 + file LICENSE 
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
